/*Added News and Faqs section with api Data*/
I have added news section which loads data from covidapi news and faqs as well

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,17 @@
     <a class="navbar-brand">Covid 19 Nepal</a>
     <div class="navbar">
       <div class="nav-item">
-        <a class="nav-link" routerLink="/post">Gallery</a>
+        <a class="nav-link" routerLink="/post">Home</a>
       </div>
       <div class="nav-item">
 
         <a class="nav-link active" routerLink="/profile">Cases Info</a>
       </div>
       <div class="nav-item">
-        <a class="nav-link" routerLink="/table">Posts</a>
+        <a class="nav-link" routerLink="/table">Cases By District</a>
       </div>
       <div class="nav-item">
-        <a class="nav-link" routerLink="/comments">Country</a>
+        <a class="nav-link" routerLink="/comments">Cases by Country</a>
 
       </div>
       <div class="nav-item">
