--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,34 +1,16 @@
-<div class="btn btn-danger">
-  Latest Posts
-</div>
+
 <div class="row">
-  <div class="col-md-12" *ngFor="let item of appServerData;let i = index">
-    <div class="card" *ngIf="i<30">
+  <div class="col-md-12" *ngFor="let item of faqData;let i = index">
+    <div class="card" >
       <div class="card-body">
-        <h4 class="card-title">
-          Title - {{item.title}} 
+        <h4 class="card-title alert alert-danger">
+         {{i+1}}) {{item.question}} 
         </h4>
-        <div class="card-text">
-          Post - " {{item.body}} "
+        <div class="card-text alert alert-primary"  >
+          Answer - " {{item.answer}} "
         </div>
-        <div class="btn btn-primary" (click)="LoadComments(item.id)">
-          Load Comments
-        </div>
-        <div class="row">
-          <div class="col-md-12" *ngFor="let comment of commentDataFactory">
-            <h3>Comments:</h3>
-            <div class="card">
-              <div class="card-title">
-                {{comment.name}}
-              </div>
-              <div class="card-body">
-                <p>
-                  {{comment.body}}
-                </p>
-              </div>
-              
-            </div>
-          </div>
+       
+       
         </div>
         
        
@@ -36,4 +18,4 @@
     </div>
   </div>
 </div>
-  </div>
+  
