--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,14 +1,9 @@
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th colspan="3">Work</th>
-      <th>Status</th>
-    </tr>
-  </thead>
-  <tbody *ngFor="let item of apiServerData;let i = index">
-    <tr *ngIf="i<30">
-      <td colspan="3">{{item.title}}</td>
-      <td>{{item.completed}}</td>
-    </tr>
-  </tbody>
-</table>
+
+  <div class="row" *ngFor="let item of newsData;let i = index">
+    <div class="col-md-12">
+      <h1 class="alert alert-primary">{{item.title}}</h1>
+      <p>{{item.summary}}</p>
+      <img src={{item.image_url}} style="width:300px;height:300px" />
+      <a href={{item.url}}>Read Full Article</a>
+    </div>
+  </div>
